--- a/GameTon/GameTon.csproj
+++ b/GameTon/GameTon.csproj
@@ -81,6 +81,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Words.cs" />
+    <Compile Include="WordInfo.cs" />
+    <Compile Include="WordsResponse.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
